# FlagGems-vllm

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README_cn.md  accuracy_result.json  jiaoben.sh  pyproject.toml  pytest.ini  workflow.md
.github/: CODEOWNERS  MULTI_BACKEND_CI.md  PULL_REQUEST_TEMPLATE.md  backend-capabilities.json
.github/workflows/: basic-ci.yml
benchmark/: attri_util.py  base.py  conftest.py  consts.py  core_shapes.yaml  performance_utils.py  test_act_quant.py  test_add_rms_norm.py  test_apply_repetition_penalties.py  test_apply_rotary_pos_emb.py  test_beam_search_score.py  test_bincount.py  test_blas_perf_parallel.py  test_concat_and_cache_mla.py  test_cp_gather_indexer_k_quant_cache.py  test_cross_entropy_loss.py  test_cutlass_scaled_mm.py  test_deepseek_v4_attention_combine_topk_swa_indices.py  test_deepseek_v4_attention_compute_global_topk_indices_and_lens.py  test_deepseek_v4_attention_dequantize_and_gather_k_cache.py  test_deepseek_v4_attention_fused_q_kv_rmsnorm.py  test_dgeglu.py  test_dreglu.py  test_dswiglu.py  test_flash_attention_forward.py  test_flash_attn_varlen_func.py  test_flash_attn_varlen_opt_init_func.py  test_flash_mla.py  test_flash_mla_sparse_fwd.py  test_flash_mla_with_kvcache.py  test_fp8_fp4_mqa_logits.py  test_fp8_fp4_paged_mqa_logits.py  test_fused_add_rms_norm.py  test_fused_deepseek_v4_qnorm_rope_kv_rope_quant_insert.py  test_fused_indexer_q_rope_quant.py  test_fused_inv_rope_fp8_quant.py  test_fused_marlin_moe.py  test_fused_moe.py  test_fused_moe_fp8.py  test_fused_moe_fp8_blockwise.py  (+42 more)
benchmark/test_FLA/: test_chunk_dplr.py  test_chunk_gated_delta_rule_fwd.py  test_chunk_gated_delta_rule_perf.py  test_chunk_gdn2.py  test_chunk_gla_perf.py  test_chunk_kda.py  test_fused_recurrent_gated_delta_rule_perf.py
conf/: operators.yaml
src/flaggems_vllm/: __init__.py  config.py  ops_moe_mxq.py
tests/: accuracy_utils.py  conftest.py  test_act_quant.py  test_add_rms_norm.py  test_apply_repetition_penalties.py  test_apply_rotary_pos_emb.py  test_beam_search_score.py  test_bincount.py  test_concat_and_cache_mla.py  test_cp_gather_indexer_k_quant_cache.py  test_cross_entropy_loss.py  test_cutlass_scaled_mm.py  test_deepseek_v4_attention_combine_topk_swa_indices.py  test_deepseek_v4_attention_compute_global_topk_indices_and_lens.py  test_deepseek_v4_attention_dequantize_and_gather_k_cache.py  test_deepseek_v4_attention_fused_q_kv_rmsnorm.py  test_dgeglu.py  test_dreglu.py  test_dswiglu.py  test_flash_attention.py  test_flash_attn_varlen_func.py  test_flash_mla.py  test_flash_mla_sparse_fwd.py  test_flash_mla_with_kvcache.py  test_fp8_fp4_mqa_logits.py  test_fp8_fp4_paged_mqa_logits.py  test_fused_add_rms_norm.py  test_fused_deepseek_v4_qnorm_rope_kv_rope_quant_insert.py  test_fused_experts_impl.py  test_fused_indexer_q_rope_quant.py  test_fused_inv_rope_fp8_quant.py  test_fused_marlin_moe.py  test_geglu.py  test_gelu_and_mul.py  test_grouped_topk.py  test_indexer_k_quant_and_cache.py  test_inplace_fused_experts.py  test_instance_norm.py  test_mhc_ops.py  test_moe_align_block_size.py  (+27 more)
tests/test_DSA/: test_bin_topk.py  test_indexer_k_tiled.py  test_sparse_mla_ops.py  utils.py
tests/test_FLA/: test_chunk_dplr.py  test_chunk_gdn2.py  (+7 more)
tools/: check_backend_env.py  check_ci_pins.py  check_nvidia_gpu.sh  prepare-flaggems-ci-env.sh  run-multi-backend-tests.sh  run_ci_targets.py  run_command.sh  select_backends.py  select_tests.py  setup.sh  test_ci_helpers.py
(+152 files in other folders)
