# Copyright 2026 FlagOS Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=64.0", "scikit-build-core>=0.11", "pybind11"]
build-backend = "setuptools.build_meta"


[project]
name = "flaggems_vllm"
version = "0.1.0"
description = "FlagGems-vllm is a deep neural network function library written in Triton."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8.0"
license = { text = "Apache Software License" }
authors = [
    { name = "Bin Zhang", email = "842884726@qq.com" },
    { name = "Bingjie Wang", email = "xxx@xxx.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=2.6.0",
    "packaging",
    "pybind11",
    "PyYAML",
    "sqlalchemy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.1.0",
    "numpy>=1.26",
    "scipy>=1.14",
    "einops>=0.6",
    "cupy-cuda12x",
]

[project.urls]
Homepage = "https://github.com/flagos-ai/FlagGems-vllm"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"flaggems_vllm.runtime" = ["*/**/*.yaml"]

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.install-dir = "flaggems_vllm"
build-dir = "build/{cache_tag}"

[tool.black]
line-length = 88
